--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -1,24 +1,25 @@
 .nav{
-    display: grid;
+    display: grid; 
     grid-template-columns: repeat(8, 1fr);
     align-items: center;
-    
+    padding: 10px 50px;
 }
 
 .nav .logo{
-    grid-column: 2/3;
-    
+    grid-column: 1/3;
+    max-height: 4rem;
 }
 
 .nav .menu{
     display: flex;
-    justify-content:space-around;
+    justify-content:space-between;
     grid-column: 4/6;
     
 }
 
 .nav .menu li{
     list-style: none;
+    font-weight: 600;
 } 
 
 .nav .menu li a{
@@ -27,11 +28,37 @@
     
 } 
 
-.nav .menu li a:hover{
-    text-decoration: underline;
+.nav .shopping{
+    grid-column: 9;
+    cursor: pointer;
 }
 
-.nav .shopping{
-    grid-column: 8/9;
-    cursor: pointer;
+.nav .shopping i{
+    color: #000000;
+}
+
+.underline {
+    display: inline-block;
+    position: relative;
+    
+}
+
+.underline:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left:0;
+    background-color: #000000;
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform .4s ease-out;
+
+
+}
+
+.underline:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
