--- a/src/css/NavEncabezado.css
+++ b/src/css/NavEncabezado.css
@@ -1,29 +1,31 @@
 .nav_encabezado{
-    display: grid;
+    display: grid; 
     grid-template-columns: repeat(8, 1fr);
     background-color:#000000;
     color:#ffffff;
-    padding:0 20px;
+    padding:20px;
+    font-size: 1.1rem;
 
 }
 
 .info_empresarial{
     grid-column: 1/3;
     display: flex;
-    padding:20px 0;
+   
 }
 
 .info_empresarial h6{
-    padding: 0 10px;
+    padding: 0 0.5rem;
 }
 
 .info_empresarial h6 i{
     margin-right: 0.5rem;
+    
 }
 
 .redes{
     grid-column: 9;
-    padding:20px 0;
+    display: flex;
 }
 
 .redes a i{
@@ -33,5 +35,5 @@
 
 .redes a i:hover{
     transition: .5s all;
-    color:#ebe9eb
+    color:bisque;
 }
