di estilo al detalle

--- a/src/css/itemDetail.css
+++ b/src/css/itemDetail.css
@@ -3,9 +3,12 @@
     flex-direction: column;
     align-items: center;
     justify-content:space-around;
-    
     padding: 100px;
-    
+    max-width: 600px;
+    min-width: 400px;
+    border: .5px solid #0000003b;
+    margin: 75px 0 75px 0;
+    background-color: rgba(255, 228, 196, 0.32);
 }
 
 .img_detalle{
